samples/_failures_safe/1761083850_2569e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a42b919c.c: In function ‘main’:
./samples/SAFE/__tmp_a42b919c.c:162:9: error: expected declaration or statement at end of input
  162 |         }
      |         ^
./samples/SAFE/__tmp_a42b919c.c:162:9: error: expected declaration or statement at end of input
